// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Power (default props) => renders correctly 1`] = `
<Text
  accessible={true}
  allowFontScaling={true}
  ellipsizeMode="tail"
  style={
    Object {
      "color": "#329932",
      "fontFamily": "telegrama_raw",
      "fontSize": 6,
      "marginLeft": 9,
      "marginTop": 15,
    }
  }
>
  undefined | |--------------------------------------------------| undefined% undefined
</Text>
`;

exports[`Power (with allied/enemy players) => renders correctly 1`] = `
<Text
  accessible={true}
  allowFontScaling={true}
  ellipsizeMode="tail"
  style={
    Object {
      "color": "#329932",
      "fontFamily": "telegrama_raw",
      "fontSize": 6,
      "marginLeft": 9,
      "marginTop": 15,
    }
  }
>
  undefined | |--------------------------------------------------| undefined% undefined
</Text>
`;

exports[`Power (with progress) => renders correctly 1`] = `
<Text
  accessible={true}
  allowFontScaling={true}
  ellipsizeMode="tail"
  style={
    Object {
      "color": "#329932",
      "fontFamily": "telegrama_raw",
      "fontSize": 6,
      "marginLeft": 9,
      "marginTop": 15,
    }
  }
>
  undefined | |==========================------------------------|  50% undefined
</Text>
`;

exports[`Power (with progress, timeLeft and allied/enemy players) => renders correctly 1`] = `
<Text
  accessible={true}
  allowFontScaling={true}
  ellipsizeMode="tail"
  style={
    Object {
      "color": "#329932",
      "fontFamily": "telegrama_raw",
      "fontSize": 6,
      "marginLeft": 9,
      "marginTop": 15,
    }
  }
>
  undefined | |==========================------------------------|  50% 00:00:25
</Text>
`;

exports[`Power (with timeLeft) => renders correctly 1`] = `
<Text
  accessible={true}
  allowFontScaling={true}
  ellipsizeMode="tail"
  style={
    Object {
      "color": "#329932",
      "fontFamily": "telegrama_raw",
      "fontSize": 6,
      "marginLeft": 9,
      "marginTop": 15,
    }
  }
>
  undefined | |--------------------------------------------------| undefined% 00:00:25
</Text>
`;
